[project]
name = "signalblast"
dynamic = ["version"]
description = "Broadcast bot for Signal"
authors = [{name = "Era Dorta"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = [
  "Signal",
  "Bot",
  "Broadcast",
]
dependencies = [
    "bcrypt>=4.1.3",
    "signalbot>=0.16.0",
]

[tool.uv]
dev-dependencies = [
  "hatch>=1.13.0,<2",
  "pre-commit >=3.7.1,<4.0",
]

# [tool.uv.sources]
# signalbot = { path = "../signalbot", editable = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",   # Docstrings
  "FIX", # TODO, FIXME and other messages
  "ERA001", # Commented out code
]
