[project]
name = "signalblast"
dynamic = ["version"]
description = "Broadcast bot for Signal"
authors = [{name = "Era Dorta"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = [
  "Signal",
  "Bot",
  "Broadcast",
]
dependencies = [
    "bcrypt>=5.0.0",
    "pydantic>=2.12.3",
    "signalbot>=0.20.0",
]

[dependency-groups]
dev = [
    "hatch>=1.15.1",
    "pre-commit>=4.3.0",
]

# [tool.uv.sources]
# signalbot = { path = "../signalbot", editable = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { fallback_version = "0.0.0" }

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",   # Docstrings
  "FIX", # TODO, FIXME and other messages
  "ERA001", # Commented out code
]
